Fix missing padding

--- a/resources/assets/less/bem/artist-track-search-sort.less
+++ b/resources/assets/less/bem/artist-track-search-sort.less
@@ -2,7 +2,7 @@
 // See the LICENCE file in the repository root for full licence text.
 
 .artist-track-search-sort {
-  padding: 10px 0;
+  padding: 0 0 10px;
 
   &__desktop {
     display: none;
