--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -80,6 +80,13 @@
     }
   }
 
+  &--artist-track-search-result {
+    .default();
+    .default-gutter-v2();
+    padding-top: 10px;
+    padding-bottom: $padding-top;
+  }
+
   &--artists {
     margin-bottom: 10px;
   }
@@ -208,11 +215,6 @@
 
   &--generic-compact {
     .default;
-  }
-
-  &--generic-compact-gutter {
-    .default();
-    .default-gutter-v2();
   }
 
   &--header {
